# NRF52_Clion_Template

./: .gitignore  CMakeLists.txt  Makefile  NRF52832.cmake  README.md  jlinkProgramRun.bat
keil/: blinky_pca10040.uvprojx
keil/RTE/Device/nRF52832_xxAA/: system_nrf52.c
src/: main.c
